--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,12 @@ nav{
     z-index: 20;
     transition: all 1s ease-in-out;
 }
+.hidden_iframe{
+    position: relative;
+    width: 100%;
+    height: 0;
+    display: none;
+}
 #contact-section p{
     max-width: 80%;
     margin-top: 1rem;
