--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,92 +17,53 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #FFF;
+    background: url('../img/herobg.jpg') center/cover no-repeat;
 }
-
-.hero-left{
-    position: relative;
-    width: 45%;
+.hero-container{
+    position: absolute;
+    top: 0;
+    padding-bottom: 4rem;
+    width: 100%;
     height: 100%;
-    padding-left: 2rem;
+    background-color: rgba(35, 0, 99, 0.6);
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
-.hero-left h1{
-    font-size: 3.5rem;
-    color: var(--primcolor);
-}
-.hero-left p{
-    margin-top: 2rem;
-    font-size: 1.5rem;
-    color: darkslategray;
-}
-
-.hero-right{
-    position: relative;
-    width: 55%;
-    height: 100%;
-    background: url('../img/hero1.svg');
-    background-size: 80% auto;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.hero-right-service{
-    padding: 1rem;
-    border-radius: 50%;
-    display: grid;
-    place-content: center;
-    cursor: pointer;
-    transition: all .5s ease;
-}
-.hero-right-service p{
+.hero-container--left{
+    width: 65%;
     color: #FFF;
-    text-align: center;
+}
+.hero-container--left h1{
+    font-size: 3.5rem;
     font-weight: 600;
-    line-height: 1.25rem;
-    font-size: auto;
 }
-.hero-right-service:hover{
-    transform: scale(1.2);
+.hero-container--left p{
+    margin-top: 2rem;
+    font-size: 1.25rem;
+    max-width: 70%;
 }
-.circleone{
+
+.hero-form{
+    width: 350px;
+    padding: 2rem 1.5rem;
+    border-radius: 16px;
+    background-color: rgb(110, 110, 253);
+}
+.hero-form label{
+    color: #FFF;
+}
+.hero-form input{
+    border: none;
+    outline: none;
+}
+
+#wave{
     position: absolute;
-    top: 10%;
-    left: 7.5%;
-    width: 125px;
-    height: 125px;
-    background: linear-gradient(75deg, rgb(95, 95, 255), rgb(110, 110, 255));
-    font-size: .9rem;
-}
-.circletwo{
-    position: absolute;
-    top: 7.5%;
-    right: 10%;
-    width: 100px;
-    height: 100px;
-    background: linear-gradient(75deg, rgb(18, 190, 18), rgb(8, 150, 11));
-    font-size: .8rem;
-}
-.circlethree{
-    position: absolute;
-    bottom: 5%;
-    left: 10%;
-    width: 110px;
-    height: 110px;
-    background: linear-gradient(75deg, rgb(255, 59, 59), rgb(250, 29, 29));
-    font-size: .8rem;
-}
-.circlefour{
-    position: absolute;
-    bottom: 7.5%;
-    right: 12%;
-    width: 150px;
-    height: 150px;
-    background: linear-gradient(120deg, rgb(10, 10, 252), rgb(52, 52, 253));
-    font-size: 1rem;
+    bottom: 0;
+    object-fit: cover;
+    object-position: top;
 }
 
 
@@ -129,7 +90,7 @@
 .wrapper{
     position: relative;
     width: 55%;
-    padding: 1rem 1.5rem;
+    padding: 2rem 1.5rem;
     background-color: #FFF;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -305,24 +266,34 @@
 
 @media (max-width: 768px) {
     .hero{
+        position: relative;
+        width: 100%;
+        height: 120vh;
+    }
+    .hero-container{
+        position: absolute;
+        top: 0;
         flex-direction: column;
     }
-    .hero-left{
+    .hero-container--left, .hero-container--right{
         width: 100%;
-        height: 35%;
-        padding: 1rem 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
-    .hero-left h1{
-        font-size: 2rem;
+    .hero-container--left{
+        height: 60vh;
     }
-
-    .hero-right{
+    .hero-container--left h1{
+        font-size: 2.25rem;
+    }
+    .hero-container--left p{
+        max-width: 90%;
+    }
+    #wave{
+        bottom: -5px;
         width: 100%;
-        height: 65%;
-        background-size: 250px auto;
-    }
-    .hero-right-service{
-        transform: scale(.8);
     }
 
     .container1{
