--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap');
 
 *, ::after, ::before{
     margin: 0;
@@ -7,6 +7,9 @@
     font-family: 'Barlow', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: azure;
     min-height: 100vh;
@@ -37,6 +40,10 @@ nav{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+}
+.nav-logo{
+    width: 48px;
+    height: auto;
 }
 
 .branding{
