--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -30,6 +30,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    z-index: 10;
 }
 .hero-container--left{
     width: 65%;
