--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -75,6 +75,7 @@
     height: 100%;
     padding: 1.5rem 1.5rem 1.5rem 0;
     background: url('../img/team.jpg') center/cover no-repeat;
+    background-attachment: fixed;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -87,7 +88,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.6);
+    background: rgba(15, 0, 50, 0.6);
 }
 .wrapper{
     position: relative;
@@ -96,7 +97,6 @@
     background-color: #FFF;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    box-shadow: 2px 2px 5px rgb(20, 20, 20);
 }
 .wrapper-title{
     position: relative;
@@ -125,7 +125,6 @@
     height: 150px;
     padding: 5px;
     background: #FFF;
-    box-shadow: 2px 2px 5px rgb(20, 20, 20);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -140,6 +139,72 @@
     text-align: center;
     max-width: 90%;
 }
+
+
+.process-section{
+    position: relative;
+    padding: 2rem 1rem;
+    width: 100%;
+    height: auto;
+    background: linear-gradient(120deg, rgb(0, 0, 170), rgb(0, 0, 115));
+}
+.white-title{
+    position: relative;
+    width: 100%;
+    height: auto;
+    font-size: 1.6rem;
+    display: grid;
+    place-content: center;
+    text-align: center;
+    background: transparent !important;
+    color: #FFF !important;
+}
+.process-container{
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    padding: 4rem 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.process-card{
+    position: relative;
+    width: 420px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    color: #FFF;
+}
+.process-count{
+    position: relative;
+    margin-bottom: 1rem;
+    width: 56px;
+    height: 56px;
+    display: grid;
+    place-content: center;
+    border: 2px solid #FFF;
+    border-radius: 50%;
+}
+.process-title{
+    margin-bottom: .5rem;
+    font-weight: 400;
+    text-align: center;
+}
+.process-content{
+    max-width: 70%;
+    text-align: center;
+    align-self: center;
+}
+.process-content a{
+    color: lime;
+    font-weight: 600;
+}
+
+
 
 
 .container2{
@@ -299,7 +364,7 @@
     }
 
     .container1{
-        padding: 1.5rem;
+        padding: 1.5rem .6rem;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
@@ -307,6 +372,10 @@
     .wrapper{
         width: 100%;
         border-radius: 15px;
+    }
+    .wrapper-title{
+        text-align: center;
+        font-size: 2.25rem;
     }
     .experience{
         width: 100%;
@@ -321,6 +390,28 @@
 
     .services-card, .services-card>*{
         transform: scale(0.9);
+    }
+
+    .process-section{
+        padding: 2rem .5rem;
+        padding-bottom: 3rem;
+    }
+    .white-title{
+        font-size: 1.25rem;
+    }
+    .process-container{
+        padding: 1rem;
+        padding-bottom: 0;
+        flex-direction: column;
+        height: auto;
+    }
+    .process-card{
+        width: 100%;
+        margin: 5rem 0 0 0;
+    }
+    .process-content{
+        max-width: 100%;
+        text-align: center;
     }
 
     .clients-img{
