--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,16 +25,24 @@
     padding-bottom: 4rem;
     width: 100%;
     height: 100%;
-    background-color: rgba(35, 0, 99, 0.6);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    z-index: 10;
+}
+.hero-container::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(35, 0, 99, 0.6);
 }
 .hero-container--left{
     width: 65%;
     color: #FFF;
+    z-index: 10;
 }
 .hero-container--left h1{
     font-size: 3.5rem;
@@ -47,11 +55,12 @@
 }
 
 .hero-form{
+    position: relative;
     width: 350px;
     padding: 2rem 1.5rem;
     border-radius: 16px;
     background-color: rgb(110, 110, 253);
-    z-index: 50;
+    z-index: 100;
 }
 .hero-form label{
     color: #FFF;
