--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 *, ::after, ::before{
     margin: 0;
@@ -23,14 +24,16 @@ a{
 
 
 header{
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 10vh;
     padding: 1rem 2rem;
-    background: linear-gradient(90deg, rgb(100, 100, 255), rgb(95, 95, 255));
+    background: #080035;
     transition: all .5s ease;
     overflow-y: hidden;
-    z-index: 10;
+    z-index: 1000;
 }
 
 nav{
@@ -71,13 +74,15 @@ nav{
 
 .menu{
     position: relative;
-    width: 45%;
+    width: 55%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-end;
 }
 .menu-links{
+    position: relative;
+    margin: 0 .5rem;
     padding: .5rem .75rem;
     background: transparent;
     border-radius: 20px;
@@ -92,6 +97,40 @@ nav{
     color: rgb(100, 100, 255);
     box-shadow: 2px 2px 5px rgb(75, 75, 255), -2px -2px 5px rgb(75, 75, 255);
 }
+
+.nav-consult{
+    position: relative;
+    margin: 0 .5rem;
+    padding: .5rem 1.25rem;
+    background: rgb(60, 255, 0);
+    color: #000;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all .3s ease;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    animation: wiggle 1s ease 1s infinite;
+}
+.nav-consult:hover{
+    background: #2e9209;
+    color: #FFF;
+}
+
+@keyframes wiggle {
+    0%{
+        transform: rotateZ(-2.5deg);
+    }
+    50%{
+        transform: rotateZ(2.5deg);
+    }
+    100%{
+        transform: rotateZ(-2.5deg);
+    }
+
+}
+
 
 #all-services{
     position: absolute;
@@ -129,7 +168,7 @@ nav{
 
 #menu-alt{
     position: absolute;
-    top: .5rem;
+    top: -.25rem;
     right: 0;
     padding: .5rem;
     background: #6464FF;
@@ -147,7 +186,7 @@ nav{
     left: 100%;
     width: 100%;
     height: 100vh;
-    padding-top: 1rem;
+    padding-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -257,7 +296,7 @@ input{
     position: fixed;
     bottom: 1rem;
     right: 1rem;
-    width: 64px;
+    width: 48px;
     height: auto;
     filter: drop-shadow(1px 1px 4px green);
     z-index: 100;
