--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ input{
 
 .quotation{
     position: fixed;
-    bottom: 2.5%;
+    bottom: 2rem;
     left: 1.5%;
     padding: .75rem 1rem;
     min-width: 180px;
@@ -294,7 +294,7 @@ input{
 
 .chatbtn{
     position: fixed;
-    bottom: 1rem;
+    bottom: 2rem;
     right: 1rem;
     width: 48px;
     height: auto;
@@ -502,6 +502,7 @@ footer{
     }
     .branding{
         width: 100%;
+        margin-top: .25rem;
         padding-left: .5rem;
     }
     .brand-name{
@@ -512,10 +513,13 @@ footer{
     }
     .menu{
         width: 100%;
-        margin-top: 2rem;
+        margin: 1rem 0;
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-around;
+    }
+    .menu-links{
+        margin: .25rem;
     }
 
     #all-services{
