--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,14 +186,14 @@ nav{
     left: 100%;
     width: 100%;
     height: 100vh;
-    padding-top: 5rem;
+    padding-top: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     background: url('../img/Cloudy.svg') center / cover no-repeat;
     color: #FFF;
-    z-index: 20;
+    z-index: 500;
     transition: all 1s ease-in-out;
 }
 .hidden_iframe{
